sterlang/examples/neg/src/aliases.erlt
-module(aliases).
-export_type([pair/2]).
-export([mk_pair/1]).

-type pair(A, B) :: {A, B}.

-spec mk_pair(A) -> pair(A, _).
mk_pair(X) ->
    {X, X}.
